--- a/operatorhub/v0.1.0/ibmcloud_operator_v1alpha1_binding.crd.yaml
+++ b/operatorhub/v0.1.0/ibmcloud_operator_v1alpha1_binding.crd.yaml
@@ -35,6 +35,10 @@ spec:
           type: object
         status:
           properties:
+            instanceId:
+              type: string
+            keyInstanceId:
+              type: string
             message:
               type: string
             state:
