fix dockefile to add CA certs

--- a/releases/v0.1.0/004_rbac_role.yaml
+++ b/releases/v0.1.0/004_rbac_role.yaml
@@ -40,6 +40,18 @@ rules:
   - update
   - patch
 - apiGroups:
+  - ''
+  resources:
+  - configmaps
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
   - apps
   resources:
   - deployments
