--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ before_script:
   - make deps
 
 before_install:
+  - mkdir -p ${GOPATH}/src/github.com/ibm
+  - mv ${GOPATH}/src/github.ibm.com/seed/cloud-operators ${GOPATH}/src/github.com/ibm/cloud-operators
+  - cd ${GOPATH}/src/github.com/ibm/cloud-operators
   - source travis-env.sh
 
 script:
