--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,14 @@ before_script:
   - make deps
 
 before_install:
-  - mkdir -p ${GOPATH}/src/github.com/ibm
-  - mv ${GOPATH}/src/github.ibm.com/seed/cloud-operators ${GOPATH}/src/github.com/ibm/cloud-operators
-  - cd ${GOPATH}/src/github.com/ibm/cloud-operators
+  #- mkdir -p ${GOPATH}/src/github.com/ibm
+  #- mv ${GOPATH}/src/github.ibm.com/seed/cloud-operators ${GOPATH}/src/github.com/ibm/cloud-operators
+  #- cd ${GOPATH}/src/github.com/ibm/cloud-operators
   - source travis-env.sh
 
 script:
   - make generate
-  - make lintall
+  #- make lintall
   # - make test
 
 after_success:
