--- a/config/samples/elastic.yaml
+++ b/config/samples/elastic.yaml
@@ -5,3 +5,11 @@ metadata:
 spec:
   plan: standard
   serviceClass: databases-for-elasticsearch
+---
+apiVersion: ibmcloud.ibm.com/v1alpha1
+kind: Binding
+metadata:
+  name: binding-myes
+spec:
+  serviceName: myes
+  role: Editor
