fix go vet errors

--- a/config/crds/ibmcloud_v1alpha1_binding.yaml
+++ b/config/crds/ibmcloud_v1alpha1_binding.yaml
@@ -35,10 +35,13 @@ spec:
           type: object
         spec:
           properties:
+            role:
+              type: string
             serviceName:
               type: string
           required:
           - serviceName
+          - role
           type: object
         status:
           properties:
