--- a/config/rbac/rbac_role.yaml
+++ b/config/rbac/rbac_role.yaml
@@ -89,7 +89,7 @@ rules:
   - patch
   - delete
 - apiGroups:
-  - openwhisk.seed.ibm.com
+  - ibmcloud.ibm.com
   resources:
   - functions
   verbs:
@@ -101,7 +101,7 @@ rules:
   - patch
   - delete
 - apiGroups:
-  - openwhisk.seed.ibm.com
+  - ibmcloud.ibm.com
   resources:
   - functions/status
   verbs:
@@ -125,7 +125,7 @@ rules:
   - patch
   - delete
 - apiGroups:
-  - openwhisk.seed.ibm.com
+  - ibmcloud.ibm.com
   resources:
   - invocations
   verbs:
@@ -137,7 +137,7 @@ rules:
   - patch
   - delete
 - apiGroups:
-  - openwhisk.seed.ibm.com
+  - ibmcloud.ibm.com
   resources:
   - invocations/status
   verbs:
@@ -149,7 +149,7 @@ rules:
   - patch
   - delete
 - apiGroups:
-  - openwhisk.seed.ibm.com
+  - ibmcloud.ibm.com
   resources:
   - packages
   verbs:
@@ -161,7 +161,7 @@ rules:
   - patch
   - delete
 - apiGroups:
-  - openwhisk.seed.ibm.com
+  - ibmcloud.ibm.com
   resources:
   - packages/status
   verbs:
@@ -173,7 +173,7 @@ rules:
   - patch
   - delete
 - apiGroups:
-  - openwhisk.seed.ibm.com
+  - ibmcloud.ibm.com
   resources:
   - rules
   verbs:
@@ -185,7 +185,7 @@ rules:
   - patch
   - delete
 - apiGroups:
-  - openwhisk.seed.ibm.com
+  - ibmcloud.ibm.com
   resources:
   - rules/status
   verbs:
@@ -197,7 +197,7 @@ rules:
   - patch
   - delete
 - apiGroups:
-  - openwhisk.seed.ibm.com
+  - ibmcloud.ibm.com
   resources:
   - triggers
   verbs:
@@ -209,7 +209,7 @@ rules:
   - patch
   - delete
 - apiGroups:
-  - openwhisk.seed.ibm.com
+  - ibmcloud.ibm.com
   resources:
   - triggers/status
   verbs:
@@ -244,3 +244,14 @@ rules:
   - update
   - patch
   - delete
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
