--- a/operatorhub/v0.1.0/ibmcloud_operator_v1alpha1_binding.crd.yaml
+++ b/operatorhub/v0.1.0/ibmcloud_operator_v1alpha1_binding.crd.yaml
@@ -35,10 +35,13 @@ spec:
           type: object
         spec:
           properties:
+            role:
+              type: string
             serviceName:
               type: string
           required:
           - serviceName
+          - role
           type: object
         status:
           properties:
