Misc fixes, subresource, samples, iam controller (#25)

--- a/config/crds/ibmcloud_v1alpha1_binding.yaml
+++ b/config/crds/ibmcloud_v1alpha1_binding.yaml
@@ -18,6 +18,8 @@ spec:
     kind: Binding
     plural: bindings
   scope: Namespaced
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       properties:
@@ -41,7 +43,6 @@ spec:
               type: string
           required:
           - serviceName
-          - role
           type: object
         status:
           properties:
