--- a/config/crds/ibmcloud_v1alpha1_function.yaml
+++ b/config/crds/ibmcloud_v1alpha1_function.yaml
@@ -127,14 +127,14 @@ spec:
                 properties:
                   attributes:
                     description: A parameter may have attributes (e.g. message hub
-
+                      topic might have partitions)
                     type: object
                   name:
                     description: Name representing the key.
                     type: string
                   value:
                     description: Defaults to null.
-                    type: object
+
                   valueFrom:
                     description: Source for the value. Cannot be used if value is
                       not empty.
