--- a/operatorhub/v0.1.0/ibmcloud_operator_v1alpha1_binding.crd.yaml
+++ b/operatorhub/v0.1.0/ibmcloud_operator_v1alpha1_binding.crd.yaml
@@ -18,6 +18,8 @@ spec:
     kind: Binding
     plural: bindings
   scope: Namespaced
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       properties:
@@ -41,7 +43,6 @@ spec:
               type: string
           required:
           - serviceName
-          - role
           type: object
         status:
           properties:
