--- a/operatorhub/v0.1.0/ibmcloud_operator_v1alpha1_invocation.crd.yaml
+++ b/operatorhub/v0.1.0/ibmcloud_operator_v1alpha1_invocation.crd.yaml
@@ -59,14 +59,14 @@ spec:
                     properties:
                       attributes:
                         description: A parameter may have attributes (e.g. message
-
+                          hub topic might have partitions)
                         type: object
                       name:
                         description: Name representing the key.
                         type: string
                       value:
                         description: Defaults to null.
-                        type: object
+
                       valueFrom:
                         description: Source for the value. Cannot be used if value
                           is not empty.
@@ -97,14 +97,14 @@ spec:
                 properties:
                   attributes:
                     description: A parameter may have attributes (e.g. message hub
-
+                      topic might have partitions)
                     type: object
                   name:
                     description: Name representing the key.
                     type: string
                   value:
                     description: Defaults to null.
-                    type: object
+
                   valueFrom:
                     description: Source for the value. Cannot be used if value is
                       not empty.
