--- a/config/rbac/rbac_role.yaml
+++ b/config/rbac/rbac_role.yaml
@@ -29,6 +29,18 @@ rules:
   - patch
   - delete
 - apiGroups:
+  - ibmcloud.ibm.com
+  resources:
+  - services
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
   - ""
   resources:
   - secrets
