--- a/operatorhub/v0.1.1/ibmcloud_operator.v0.1.1.clusterserviceversion.yaml
+++ b/operatorhub/v0.1.1/ibmcloud_operator.v0.1.1.clusterserviceversion.yaml
@@ -3,12 +3,12 @@ kind: ClusterServiceVersion
 metadata:
   annotations:
     alm-examples: |-
-      [{"metadata": {"name": "myeventstreams"}, "kind": "Service", "apiVersion": "ibmcloud.ibm.com/v1alpha1", "spec": {"serviceClass": "messagehub", "plan": "standard", "externalName": "myeventstreams"}}, {"metadata": {"name": "myeventstreams-binding"}, "kind": "Binding", "apiVersion": "ibmcloud.ibm.com/v1alpha1", "spec": {"serviceName": "myeventstreams"}}, {"metadata": {"name": "greetings"}, "kind": "Function", "apiVersion": "ibmcloud.ibm.com/v1alpha1", "spec": {"codeURI": "https://raw.githubusercontent.com/apache/incubator-openwhisk-catalog/master/packages/utils/echo.js", "parameters": [{"value": "Bonjour", "name": "message"}], "runtime": "nodejs:6"}}, {"metadata": {"name": "echo-invocation"}, "kind": "Invocation", "apiVersion": "ibmcloud.ibm.com/v1alpha1", "spec": {"function": "/whisk.system/utils/echo", "finalizer": {"function": "/whisk.system/utils/echo", "parameters": [{"value": "Bye World", "name": "message"}]}, "parameters": [{"value": "Hello World", "name": "message"}]}}, {"metadata": {"name": "mh-publish"}, "kind": "Package", "apiVersion": "ibmcloud.ibm.com/v1alpha1", "spec": {"bind": "/whisk.system/messaging", "service": "message-hub"}}, {"metadata": {"name": "image-uploaded"}, "kind": "Trigger", "apiVersion": "ibmcloud.ibm.com/v1alpha1", "spec": {"feed": "openwhisk-cloudant/changes"}}, {"metadata": {"name": "my-rule"}, "kind": "Rule", "apiVersion": "ibmcloud.ibm.com/v1alpha1", "spec": {"trigger": "image-uploaded", "action": "hello-world"}}]
+      [{"metadata": {"name": "myeventstreams"}, "spec": {"plan": "standard", "serviceClass": "messagehub", "externalName": "myeventstreams"}, "kind": "Service", "apiVersion": "ibmcloud.ibm.com/v1alpha1"}, {"metadata": {"name": "myeventstreams-binding"}, "spec": {"serviceName": "myeventstreams"}, "kind": "Binding", "apiVersion": "ibmcloud.ibm.com/v1alpha1"}, {"metadata": {"name": "greetings"}, "spec": {"codeURI": "https://raw.githubusercontent.com/apache/incubator-openwhisk-catalog/master/packages/utils/echo.js", "runtime": "nodejs:6", "parameters": [{"value": "Bonjour", "name": "message"}]}, "kind": "Function", "apiVersion": "ibmcloud.ibm.com/v1alpha1"}, {"metadata": {"name": "echo-invocation"}, "spec": {"finalizer": {"function": "/whisk.system/utils/echo", "parameters": [{"value": "Bye World", "name": "message"}]}, "parameters": [{"value": "Hello World", "name": "message"}], "function": "/whisk.system/utils/echo"}, "kind": "Invocation", "apiVersion": "ibmcloud.ibm.com/v1alpha1"}, {"metadata": {"name": "mh-publish"}, "spec": {"bind": "/whisk.system/messaging", "service": "message-hub"}, "kind": "Package", "apiVersion": "ibmcloud.ibm.com/v1alpha1"}, {"metadata": {"name": "image-uploaded"}, "spec": {"feed": "openwhisk-cloudant/changes"}, "kind": "Trigger", "apiVersion": "ibmcloud.ibm.com/v1alpha1"}, {"metadata": {"name": "my-rule"}, "spec": {"action": "hello-world", "trigger": "image-uploaded"}, "kind": "Rule", "apiVersion": "ibmcloud.ibm.com/v1alpha1"}]
     capabilities: Full Lifecycle
     categories: Cloud Provider
     certified: 'false'
     containerImage: registry.ng.bluemix.net/seed/cloud-operators:0.1.1
-    createdAt: '2019-06-11T14:40:55Z'
+    createdAt: '2019-06-11T15:10:47Z'
     description: The IBM Cloud Service Operator provides a Kubernetes CRD-Based API
       to manage the lifecycle of IBM public cloud services.
     support: IBM
@@ -119,7 +119,31 @@ spec:
         - apiGroups:
           - ibmcloud.ibm.com
           resources:
+          - bindings/finalizers
+          verbs:
+          - get
+          - list
+          - watch
+          - create
+          - update
+          - patch
+          - delete
+        - apiGroups:
+          - ibmcloud.ibm.com
+          resources:
           - services
+          verbs:
+          - get
+          - list
+          - watch
+          - create
+          - update
+          - patch
+          - delete
+        - apiGroups:
+          - ibmcloud.ibm.com
+          resources:
+          - services/finalizers
           verbs:
           - get
           - list
