Prepare code for unit testing (#46)
* Start introducing unit test for service

* use generic resource status for esindex

--- a/config/crds/ibmcloud_v1alpha1_binding.yaml
+++ b/config/crds/ibmcloud_v1alpha1_binding.yaml
@@ -46,6 +46,9 @@ spec:
           type: object
         status:
           properties:
+            generation:
+              format: int64
+              type: integer
             instanceId:
               type: string
             keyInstanceId:
