--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ sudo: required
 services:
   - docker
 
+env:
+  - INSTALL_MINIKUBE=1 
+
 go_import_path: github.com/ibm/cloud-operators
 
 before_script:
@@ -13,9 +16,10 @@ before_script:
  
 before_install:
   - source ./tools/travis/travis-env.sh
-  - ./tools/travis/start-kubeadm-dind.sh
+  #- ./tools/travis/start-kubeadm-dind.sh
   - ./tools/travis/k8s-tools.sh
-  - ./tools/travis/minikube-install.sh
+  #- ./tools/travis/minikube-install.sh
+  - ./tools/travis/set-kube-config.sh
   - ./tools/travis/bx-install.sh
   - ./tools/travis/bx-setup.sh
 
@@ -24,6 +28,7 @@ script:
   - hack/update-codegen.sh
   - make lintall
   - make test
+  - test/e2e/test.sh
 
 after_success:
   - make push
