--- a/config/default/manager_image_patch.yaml
+++ b/config/default/manager_image_patch.yaml
@@ -8,5 +8,5 @@ spec:
     spec:
       containers:
       # Change the value of image field below to your controller image URL
-      - image: registry.ng.bluemix.net/seed/cloud-operators:0.1.1.1
+      - image: registry.ng.bluemix.net/seed/cloud-operators:e2e-test
         name: manager
