--- a/operatorhub/v0.1.2/ibmcloud_operator_v1alpha1_binding.crd.yaml
+++ b/operatorhub/v0.1.2/ibmcloud_operator_v1alpha1_binding.crd.yaml
@@ -46,6 +46,9 @@ spec:
           type: object
         status:
           properties:
+            generation:
+              format: int64
+              type: integer
             instanceId:
               type: string
             keyInstanceId:
