--- a/releases/v0.1.2/003_ibmcloud_v1alpha1_binding.yaml
+++ b/releases/v0.1.2/003_ibmcloud_v1alpha1_binding.yaml
@@ -46,6 +46,9 @@ spec:
           type: object
         status:
           properties:
+            generation:
+              format: int64
+              type: integer
             instanceId:
               type: string
             keyInstanceId:
